繰り返す回数を指定できるようにした

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <body>
         <h1>ビッグモーター副社長構文ジェネレータ</h1>
         <h2>入力</h2>
-        <label>
-            <p>単語1: <br>
-            <input type="text" id="word1" value="教育" onkeyup="inputCheck()"></p>
-            <p>単語2: <br>
-            <input type="text" id="word2" value="死刑" onkeyup="inputCheck()"></p>
-        </label>
+        <p>単語1: <br>
+        <input type="text" id="word1" value="教育" placeholder="教育" onkeyup="inputCheck()"><br>
+        <input type="number" id="number1" value="18">個</p>
+        <p>単語2: <br>
+        <input type="text" id="word2" value="死刑" placeholder="死刑" onkeyup="inputCheck()"><br>
+        <input type="number" id="number2" value="9">個</p>
         <h2>出力</h2>
         <p id="output">教育教育教育教育教育教育教育教育教育教育教育教育教育教育教育教育教育教育死刑死刑死刑死刑死刑死刑死刑死刑死刑教育教育教育教育教育教育教育教育教育教育教育教育教育教育教育教育教育教育</p>
         <script type="text/javascript" src="main.js"></script>
